Project cards fixed on mobile

--- a/src/components/pages/projects/Project.css
+++ b/src/components/pages/projects/Project.css
@@ -81,7 +81,15 @@ Blog
 }
 
 .btn-live {
-  letter-spacing: 1;
+  letter-spacing: 0 ;
+  visibility: hidden;
+}
+.btn-live:hover {
+  cursor: pointer;
+}
+
+.project:hover .btn-live {
+  visibility: visible;
 }
 
 
